# dm-assist

./: .gitmodules  CMakeLists.txt  README.md  README_EN.md  character template.json  config.xml  dndcreature.cpp  dndcreature.h  encounter.h  hpprogressbardelegate.h  initiativemodel.cpp  initiativemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monster template.json  qinitiativetrackerwidget.cpp  qinitiativetrackerwidget.h  qinitiativetrackerwidget.ui  qplayer.ui  qplayerwidget.cpp  qplayerwidget.h  qplaylistedit.ui  qsaveconfigdialog.cpp  qsaveconfigdialog.h  recentcampaigndialog.cpp  recentcampaigndialog.h  saveconfigdialog.cpp  saveconfigdialog.h  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  thememanager.cpp  thememanager.h  updatechecker.cpp  updatechecker.h
bestiary/: bestiarypage.cpp  bestiarypage.h  bestiarypage.ui  dndbeaststructure.h  dndbestiarypage.cpp  dndbestiarypage.h  dndbestiarypage.ui  rolltextbrowser.cpp
bestiary-widget/: dndbeaststructure.h  dndbestiarypage.cpp  dndbestiarypage.h  dndbestiarypage.ui  fvttparser.cpp  fvttparser.h  rolltextbrowser.cpp  rolltextbrowser.h
campaign-tree-widget/: campaigntreewidget.cpp  campaigntreewidget.h  hoverwidget.cpp  hoverwidget.h
campaign-view/: campaigntreeview.cpp  campaigntreeview.h
charsheet-widget/: abstractcharsheetwidget.h  attackdialog.ui  characterparser.cpp  charaсterparser.cpp  charaсterparser.h  dndCharacterData.h  dndCharsheetStructrure.h  dndcharsheetdialogs.cpp  dndcharsheetdialogs.h  dndcharsheetwidget.cpp  dndcharsheetwidget.h  dndcharsheetwidget.ui  dndmodels.cpp  dndmodels.h  resourcedialog.ui  textclickablecheckbox.cpp  textclickablecheckbox.h
dnd-glossary/: dndcampaign.h  dndcreature.h  dndspellwidget.cpp  qdndcharacterwidget.cpp  qdndcharacterwidget.h  qdndcharacterwidget.ui
error-handler/: errorhandler.cpp  errorhandler.h
file-templates/: dnd-character-template.json  theme-template.xml
icon-picker/: iconpickerdialog.cpp  iconpickerdialog.h
initiative-tracker/: encounter.h  hpprogressbardelegate.cpp  hpprogressbardelegate.h  initiativedelegates.cpp  initiativedelegates.h  initiativemodel.cpp  initiativemodel.h  initiativestructures.h  initiativetrackerwidget.cpp  initiativetrackerwidget.h  initiativetrackerwidget.ui  qinitiativetrackerwidget.cpp  qinitiativetrackerwidget.h  qinitiativetrackerwidget.ui  statuseditdialog.cpp  statuseditdialog.h  statuseditdialog.ui  statusmanager.cpp  statusmanager.h
map-widget/: abstractmaptool.h  areashapetool.cpp  areashapetool.h  brushtool.cpp  brushtool.h  calibrationtool.cpp  calibrationtool.h  effectgrapchicsitem.cpp  effectgrapchicsitem.h  fixedsizetextitem.cpp  fixedsizetextitem.h  fogtool.cpp  fogtool.h  griditem.cpp  griditem.h  heightmaptool.cpp  heightmaptool.h  lighttool.cpp  lighttool.h  mapscene.cpp  mapscene.h  maptabwidget.cpp  maptabwidget.h  mapview.cpp  mapview.h  rulermaptool.cpp  rulermaptool.h  rulertool.cpp  rulertool.h  sharedmapwindow.cpp  sharedmapwindow.h  spellshapeitem.cpp  spellshapeitem.h  spellshapetool.cpp  spellshapetool.h  texturemanager.h  texturepickerdialog.h  tokenitem.cpp  tokenitem.h  undostack.h
music-widget/: musicplayer.ui  musicwidget.cpp  musicwidget.h  playlisteditdialog.ui
roll-widget/: rollwidget.cpp  rollwidget.h  rollwidget.ui
spell-book-widget/: spelleditwidget.cpp  spelleditwidget.h  spelleditwidget.ui
spellShape/: spellshapefactory.cpp  spellshapefactory.h  spellshapepreview.cpp  spellshapepreview.h  spellshapetool.cpp  spellshapetool.h
static/: app_resources.qrc  win_resources.rc
theme-manager/: themediconmanager.cpp  themediconmanager.h  thememanager.cpp  thememanager.h
themes/: mydark.xml
translations/: dm-assist_en_US.ts  dm-assist_ru_RU.ts
tutorial/: tutorialmanager.cpp  tutorialmanager.h  tutorialstep.h
